# L3AGI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  setup.sh
apps/server/: .env.example  .gitignore  Pipfile  README.md  chains.py  chart_generator_lambda.py  config.py  entrypoint.sh  enums.py  exceptions.py  l3_base.py  main.py  postgres.py  pubsub_service.py  pyproject.toml  sql_query_engine.py  system_message.py  test.py  tools.py  worker.py
apps/server/agents/: base_agent.py  handle_agent_errors.py  team_base.py
apps/server/agents/api/: account.py  file.py
apps/server/agents/conversational/: conversational.py  l3_conversational.py  output_parser.py  streaming_aiter.py
apps/server/agents/plan_and_execute/: agent_executor.py  chat_planner.py  l3_plan_and_execute.py  plan_and_execute.py  plan_and_execute_chain.py
apps/server/api/: chat.py  client.py  collection.py  game.py  gql.py  user.py
apps/server/controllers/: account.py  agent.py  api_key.py  auth.py  chat.py  config.py  configuration.py  datasource.py  file.py  fine_tuning.py  google_search.py  integrations.py  llm.py  model.py  pod.py  project.py  resource.py  run.py  schedule.py  team.py  team_agent.py  template.py  tool.py  user.py  user_account_access.py  voice.py  workspace.py
apps/server/datasources/: base.py  get_datasources.py
apps/server/datasources/file/: file.py  file_retriever.py
apps/server/datasources/mysql/: mysql.py
apps/server/datasources/postgres/: postgres.py
apps/server/docker/: Dockerfile  docker-compose.yml
apps/server/gql/account/: account.gql
apps/server/gql/chat/: importContract.gql  sqlReport.gql
apps/server/gql/collection/: collectionById.gql  collectionFragment.gql
apps/server/gql/file/: generateUploadUrl.gql
apps/server/gql/game/: gameById.gql  gameFragment.gql
apps/server/gql/user/: user.gql
apps/server/integrations/: base.py  get_integrations.py
apps/server/integrations/telegram/: telegram_integration.py
apps/server/l3_types/: account_types.py  agent_types.py  auth_types.py  chat_types.py  config_types.py  datasource_types.py  project_types.py  role_types.py  team_agent_types.py  team_types.py  tool_types.py  user_account_types.py  user_accout_model_types.py  user_types.py
apps/server/memory/: buffer.py  zep.py
apps/server/memory/zep/: zep_chat_message_history.py  zep_memory.py
apps/server/migrations/: env.py
apps/server/migrations/versions/: 041177c95b30_add_podmodel_resourcemodel.py  8ee8b2ab331f_template_pod_relation.py  (+5 more)
apps/server/models/: __init__.py  account.py  agent.py  agent_config.py  api_key.py  base_model.py  chat.py  chat_message.py  config.py  datasource.py  db.py  fine_tuning.py  pod.py  project.py  resource.py  role.py  run.py  run_log.py  schedule.py  schedule_config.py  team.py  team_agent.py  team_config.py  template.py  tool.py  user.py  user_account.py  user_account_access.py  workspace.py
apps/server/pdf/: .gitignore  pdf.py  pdf_async.py
apps/server/resolvers/: account.py  context.py  user.py
apps/server/services/: auth.py  auth_service.py  aws_s3.py  chat.py  fine_tuning.py  pubsub.py  run_log.py  schedule.py  twilio.py  voice.py
apps/server/terraform/: _config.tf  main.tf  outputs.tf  variables-container.tf  variables-infrastructure.tf
apps/server/tool/: get_tools.py
apps/server/tools/: base.py  get_tools.py
apps/server/typings/: account.py  account_types.py  agent.py  agent_types.py  api_key.py  auth.py  chat.py  config.py  config_types.py  datasource.py  file.py  fine_tuning.py  integrations.py  llm.py  model.py  pod.py  project_types.py  resource.py  run.py  schedule.py  team.py  team_agent.py  team_types.py  template.py  tool.py  tool_types.py  user.py  user_account.py  user_account_access.py  user_types.py  voice.py  workspace.py
apps/server/utils/: account.py  account_utils.py  agent.py  agent_utils.py  api_key.py  auth.py  chat.py  chat_utils.py  config.py  config_utils.py  configuration.py  datasource.py  datasource_utils.py  encyption.py  fine_tuning.py  llm.py  model.py  project.py  project_utils.py  run_log.py  schedule.py  system_message.py  team.py  team_agent.py  team_agent_utils.py  team_utils.py  tool.py  tool_utils.py  type.py  user.py  user_account_access.py  user_utils.py  voice.py  workspace.py
apps/server/voices/: base.py  get_voices.py
apps/worker/: .env.example  .gitignore  README.md  config.py  docker-compose.yml  health_check.py  helpers.py  main.py  pyproject.toml  supervisord.conf  supervisord_worker.conf
apps/worker/docker/: Dockerfile  Dockerfile.beat  Dockerfile.worker
(+1525 files in other folders)
